--- a/src/styles/Section1.css
+++ b/src/styles/Section1.css
@@ -16,10 +16,10 @@
   color: #26093a;
 }
 
-.section-1 .see-less {
+.section-1 .see-style {
   text-decoration: none;
 }
-.section-1 .see-less p {
+.section-1 .see-style p {
   border: 1px solid #7c20be;
   width: 150px;
   height: 45px;
