--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -23,9 +23,13 @@
   text-decoration: none;
 }
 
-.footer .social-media-links {
+.footer .community:hover {
+  opacity: 0.7;
+}
+.footer .communities {
   display: flex;
   justify-content: space-between;
+  /* opacity: 0.7; */
 }
 
 .footer .copyright {
