--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -35,8 +35,15 @@
   background-color: white;
 }
 
-.links:hover {
+.navbar .links:hover {
   -webkit-transform: scale(1.2);
   -ms-transform: scale(1.2);
   transform: scale(1.2);
+}
+
+@media (max-width: 500px) {
+  .navbar .pages {
+    display: grid;
+    gap: 0.5rem;
+  }
 }
