--- a/src/styles/Section4.css
+++ b/src/styles/Section4.css
@@ -48,3 +48,11 @@
   font-weight: 500;
   font-size: 13px;
 }
+
+@media (max-width: 1400px){
+  .section-4 .cards{
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+  }
+}
